--- a/root_week10/style.css
+++ b/root_week10/style.css
@@ -9,23 +9,28 @@
 html, body {
 	height:100%;
 }
-
-video#foot{
+section#video {
 	display: flex;
-	position: fixed;
+
 	justify-content: center;
 	align-items: center;
-	right: 0; top: 0; bottom: 0; left: 0;
+	height: 100%;
+	border: 1px solid red;
+	overflow: hidden;
+}
+
+video#foot{
+	position: fixed;
+	right: 0; top: 0;
 	min-width: 100%;
 	min-height: 100%;
 	width: auto; height: auto;
 	z-index: -1;
-	background: url(images/photo.png) no-repeat;
+	background: url(../images/photo.png) no-repeat;
 	background-size: cover;
 }
 
-h#title {
-	background-size: cover;
+h1#title {
 	text-align: center;
 	text-transform: uppercase;
 	background-color: aqua;
@@ -33,14 +38,12 @@ h#title {
 }
 
 section#text {
-	margin-top: 100%;
 	padding: 10px;
 	background: #5F0E10;
 	display: flex;
 	flex-flow:  row wrap;
-	width: 100%;
 	height: 50%;
-	justify-content: center;	
+	justify-content: center;
 }
 
 div{
@@ -50,17 +53,17 @@ div{
 	margin: 10px;
 	text-align: center;
 	display: flex;	
-	font-size: 5vmin;
+	font-size: 4vmin;
 }
 
-section#text h {
+section#text h1 {
 	margin: auto;
 }
 
 @media all and (min-width:600px) {
-	div {flex: 1 40%;font-size: 7vmin;}
+	div {flex: 1 40%;font-size: 6vmin;}
 }
 
 @media all and (min-width:1000px) {
-	div {flex: 1 20%; font-size: 10vmin;}
+	div {flex: 1 20%; font-size: 7vmin;}
 }
